k8s/manifests/base/apps/adminer/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:5.4.2-standalone
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
          volumeMounts:
            - name: autologin-script
              mountPath: /var/www/html/index.php
              subPath: index.php
      volumes:
        - name: autologin-script
          configMap:
            name: adminer-autologin
